NKP/traefik/rn3-transport-nkp-nginx-svc-keycloak.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-keycloak
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Content-Type-Options nosniff";
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-XSS-Protection: 1; mode=block";
      more_set_headers "Content-Security-Policy: default-src 'self' 'unsafe-inline' https://*.reportnet.europa.eu"
      more_set_headers "Referrer-Policy: no-referrer";
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload";
      more_set_headers "Feature-Policy: camera 'self'; microphone 'self'";
      more_set_headers "Access-Control-Allow-Origin * ";
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS
spec:
  rules:
  - host: transport-auth-awstest.reportnet.europa.eu
    http:
      paths:
        - backend:
            service:
              name: keycloak-http
              port:
                number: 80
          path: /auth/realms/Reportnet
          pathType: Prefix
        - backend:
            service:
              name: keycloak-http
              port:
                number: 80
          path: /auth/resources
          pathType: Prefix
    # http:
    #   paths:
    #   - path: /
    #     pathType: Prefix
    #     backend:
    #       service:
    #         name: keycloak-http
    #         port:
    #           number: 80
  ingressClassName: nginx
